k8s_and_helm/ray-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ray-ingress
  labels:
    app: ray-ingress
  annotations:
    kubernetes.io/ingress.class: public-iks-k8s-nginx
spec:
  tls:
  - hosts:
    - mycluster-us-south-310329-4f27b99c6360f285c2c732f9adc614f1-0000.us-south.containers.appdomain.cloud
    secretName: mycluster-us-south-310329-4f27b99c6360f285c2c732f9adc614f1-0000
  rules:
  - host: mycluster-us-south-310329-4f27b99c6360f285c2c732f9adc614f1-0000.us-south.containers.appdomain.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: raycluster-kuberay-head-svc
            port:
              number: 8265
      - path: /serve
        pathType: Prefix
        backend:
          service:
            name: raycluster-kuberay-head-svc
            port:
              number: 8000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: raycluster-kuberay-head-svc
            port:
              number: 8080
